# machine-learning-reference-vault

./: .gitignore  LICENSE  README.md
reference-vault/: README.md  pyproject.toml  requirements-dev.txt
reference-vault/notebooks/: C1_W2_S05_Linear_Regression.ipynb  C1_W2_S3_v05_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W2__s1_v04_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_s1_v6_Multiple_Variable_Soln.ipynb  C1_W2_s3_v08_FeatEng_PolyReg_Soln.ipynb  C1_W2_s3_v09_Sklearn_GD_Soln.ipynb  C1_W2_s3_v09_Sklearn_Normal_Soln.ipynb  C1_W3_S01_V02_Classification_Soln.ipynb  C1_W3_S01_v06_Decision_Boundary_Soln.ipynb  C1_W3_S03_V04_Cost_Function_Soln.ipynb  C1_W3_S05_V02_Gradient_Descent_Soln.ipynb  C1_W3_S05_V03_Scikit_Learn_Soln.ipynb  C1_W3_S07_V03_Overfitting_Soln.ipynb  C1_W3_s01_v04_Sigmoid_function_Soln.ipynb  C1_W3_s03_v02_LogisticLoss_Soln.ipynb  C1_W3_s07_v07_Regularization_Soln.ipynb  C1_W3_s10_v01_Logistic_Regression.ipynb  C2_W1_Implementation_week.ipynb  C2_W1_Implementation_week_3.ipynb  C2_W2_Implementation_week_two.ipynb  c1_w1_s2_v06_python_and_jupiter_notebooks.ipynb  c1_w1_s4_v02_model_representation.ipynb  c1_w1_s4_v05_visualizing_the_cost_function.ipynb  c1_w1_s4_v06_const_function_sol.ipynb  c1_w1_s6_v06_Gradient_Descent_Soln.ipynb
reference-vault/src/app/: main.py
reference-vault/src/capstone/: TextEmbedding.py  lenet_5_character_recognition.py  mpg_regression.py  tumor_classification.py
reference-vault/src/lib/: math.py
reference-vault/tests/lib/: test_lenet_5_character_recognition.py  test_math.py  test_mpg_regression.py  (+1 more)
(+8 files in other folders)
